document student logout
